Исправление, согласно замечаниям(2)